Threadmap height now %age

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,7 +37,7 @@ img.avatar {
     margin-right: 4px;
 }
 div#notepad {
-    height: 300px;
+    height: 30%;
     width: 100%;
     background: white;
     overflow: hidden;
