--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,8 +46,15 @@ img.avatar {
 div#toolbar {
     display: inline-block;
     position: fixed;
-    top: 15px;
+    padding: 10px;
+    top: 0px;
     right: 30px;
+    border: 1px solid #d6d6d6;
+border-bottom-right-radius: 10px;
+border-bottom-left-radius: 10px;
+background-image: -moz-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #ececec 90%, #e6e6e6);
+background-image: -webkit-gradient(linear, center top, center bottom, from(#fcfcfc), to(#e6e6e6), color-stop(3%, #f7f7f7), color-stop(12%, #f2f2f2), color-stop(90%, #ececec));
+box-shadow: 0 1px 5px 2px rgba(0,0,0,0.4);
 }
 .caption {
     font-size: 50%;
@@ -55,7 +62,12 @@ div#toolbar {
 .toolbar-button {
     text-align: center;
     display: inline-block;
+    padding-right: 4px;
 }
+.toolbar-button:last-child {
+    padding-right: 0px;
+}
+
 #user-dialog {
     max-width: 600px;
 }
